[gd_scene load_steps=47 format=2]

[ext_resource path="res://scripts/vehicles/restless.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/muzzle_flash_cpu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/cameras_&_ui/follow_camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/particles/rocket_flame.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/meshes/vehicles/restless.tres" type="ArrayMesh" id=5]
[ext_resource path="res://resources/materials/vehicles/restless/stock.material" type="Material" id=6]
[ext_resource path="res://scenes/particles/rocket_flame_cpu.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/particles/drift_smoke_cpu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/particles/muzzle_flash.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/particles/drift_smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/particles/nitro_flame.tscn" type="PackedScene" id=11]
[ext_resource path="res://resources/materials/vehicles/wheels_standard/restless.material" type="Material" id=12]
[ext_resource path="res://resources/materials/vehicles/restless_rocket/stock.material" type="Material" id=13]
[ext_resource path="res://scenes/particles/death_explosion.tscn" type="PackedScene" id=14]
[ext_resource path="res://resources/meshes/vehicles/wheel_0.tres" type="ArrayMesh" id=15]
[ext_resource path="res://resources/meshes/vehicles/restless_door.tres" type="ArrayMesh" id=16]
[ext_resource path="res://scenes/particles/nitro_flame_cpu.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/particles/death_smoke_cpu.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/particles/death_smoke.tscn" type="PackedScene" id=19]
[ext_resource path="res://resources/materials/weapon_components/sniper_rifle.material" type="Material" id=20]
[ext_resource path="res://resources/meshes/weapon_components/sniper_rifle.tres" type="ArrayMesh" id=21]
[ext_resource path="res://resources/materials/weapon_components/light_machine_gun.material" type="Material" id=22]
[ext_resource path="res://resources/meshes/weapon_components/light_machine_gun.tres" type="ArrayMesh" id=23]
[ext_resource path="res://resources/meshes/vehicles/restless_rocket.tres" type="ArrayMesh" id=24]
[ext_resource path="res://resources/materials/vehicles/restless_door/stock.material" type="Material" id=25]
[ext_resource path="res://resources/sounds/vehicles/sci-fi_vehicle_spaceship_jet_engine_loop3.wav" type="AudioStream" id=26]
[ext_resource path="res://resources/sounds/vehicles/gas_leak_01_loop.wav" type="AudioStream" id=27]
[ext_resource path="res://resources/sounds/destruction/explosion_large_06.wav" type="AudioStream" id=28]
[ext_resource path="res://resources/sounds/vehicles/tyre_skid_loop_01.wav" type="AudioStream" id=29]
[ext_resource path="res://resources/sounds/vehicles/engine_generator_loop_01.wav" type="AudioStream" id=30]
[ext_resource path="res://scripts/vehicles/wheel_mesh.gd" type="Script" id=31]
[ext_resource path="res://resources/sounds/vehicles/hydraulic_strut_air_gas_shock_door_04.wav" type="AudioStream" id=32]
[ext_resource path="res://resources/sounds/vehicles/hydraulic_strut_air_gas_shock_door_05.wav" type="AudioStream" id=33]
[ext_resource path="res://scripts/world/shadow_setter.gd" type="Script" id=34]
[ext_resource path="res://scenes/particles/acid.tscn" type="PackedScene" id=35]
[ext_resource path="res://resources/fonts/PixeloidMono.ttf" type="DynamicFontData" id=36]
[ext_resource path="res://scripts/cameras_&_ui/score_label.gd" type="Script" id=37]
[ext_resource path="res://scenes/particles/acid_cpu.tscn" type="PackedScene" id=38]
[ext_resource path="res://scenes/particles/death_explosion_cpu.tscn" type="PackedScene" id=39]
[ext_resource path="res://scripts/vehicles/body_mesh.gd" type="Script" id=40]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0.925, 0.485, 2.458, -0.925, 0.485, 2.458, 0.888, 1.094, 0.4, -0.888, 1.094, 0.4, 0.888, 1.094, -2.377, -0.888, 1.094, -2.377, 0.937, 0.067, 2.455, -0.937, 0.067, 2.455, 0.937, 0.079, -2.452, -0.937, 0.079, -2.452 )

[sub_resource type="DynamicFont" id=19]
size = 9
font_data = ExtResource( 36 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body/RocketMeshLeft:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.01, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/RocketMeshRight:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.01, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/DoorMesh:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -2.15536e-07, 90, 4.937 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/RocketMeshLeft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/RocketMeshRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "nitro_rocket"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Body/RocketMeshLeft:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.225, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.01, 0, 0 ), Vector3( 0.21, 0, 0 ), Vector3( 0.2, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/RocketMeshRight:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.225, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.01, 0, 0 ), Vector3( -0.21, 0, 0 ), Vector3( -0.2, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/DoorMesh:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.11759e-08, 0.225, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -2.15536e-07, 90, 4.937 ), Vector3( 0, 204.506, 4.937 ), Vector3( 0, 201.744, 4.937 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/RocketMeshLeft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/RocketMeshRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=18]
resource_name = "rocket_nitro"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Body/RocketMeshLeft:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.2, 0, 0 ), Vector3( -0.01, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/RocketMeshRight:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.2, 0, 0 ), Vector3( 0.01, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/DoorMesh:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.11759e-08, 0.225, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 201.744, 4.937 ), Vector3( 0, 88.437, 4.937 ), Vector3( 0, 90, 4.937 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/RocketMeshLeft:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/RocketMeshRight:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="RootSpatial" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="." groups=["combat_vehicle"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.174144, 0 )
collision_mask = 3
mass = 183.673
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )
base_engine_force = 165.6
base_boost_type = 2
nitro_force = 4320.0
rocket_force = 113.4
burst_force = 0.0
scene_resource = "res://scenes/vehicles/restless.tscn"

[node name="WheelFrontLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.101966, 1.5867 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.288
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelFrontRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.101966, 1.58692 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.288
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackLeft" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886013, 0.101966, -1.23149 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.288
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="WheelBackRight" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.88, 0.101966, -1.23115 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.288
wheel_friction_slip = 2.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="CollisionShape" type="CollisionShape" parent="Body"]
shape = SubResource( 6 )

[node name="CameraBase" parent="Body" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.974, 0.9 )

[node name="BodyMesh" type="MeshInstance" parent="Body"]
physics_interpolation_mode = 1
portal_mode = 3
material_override = ExtResource( 6 )
mesh = ExtResource( 5 )
script = ExtResource( 40 )
required_setting = 1
wheel_scale = 0.8

[node name="WheelFrontLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.886013, 0.101966, 1.5867 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontLeft")
script = ExtResource( 31 )
required_setting = 3
wheel_path = NodePath("../../WheelFrontLeft")

[node name="WheelFrontRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.88, 0.101966, 1.58692 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelFrontRight")
script = ExtResource( 31 )
required_setting = 3
wheel_path = NodePath("../../WheelFrontRight")

[node name="WheelBackLeft" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0.886013, 0.101966, -1.23149 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackLeft")
script = ExtResource( 31 )
required_setting = 3
wheel_path = NodePath("../../WheelBackLeft")

[node name="WheelBackRight" type="MeshInstance" parent="Body/BodyMesh"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, -0.88, 0.101966, -1.23115 )
portal_mode = 3
material_override = ExtResource( 12 )
mesh = ExtResource( 15 )
skeleton = NodePath("../../WheelBackRight")
script = ExtResource( 31 )
required_setting = 3
wheel_path = NodePath("../../WheelBackRight")

[node name="SniperMesh" type="MeshInstance" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.52865, 0.717167, 1.41345 )
portal_mode = 3
mesh = ExtResource( 21 )
material/0 = ExtResource( 20 )
script = ExtResource( 34 )
required_setting = 3

[node name="MachineGunMesh" type="MeshInstance" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.529, 0.717, 1.413 )
portal_mode = 3
mesh = ExtResource( 23 )
material/0 = ExtResource( 22 )
script = ExtResource( 34 )
required_setting = 3

[node name="RocketMeshLeft" type="MeshInstance" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.01, 0, 0 )
visible = false
portal_mode = 3
material_override = ExtResource( 13 )
mesh = ExtResource( 24 )
script = ExtResource( 34 )
required_setting = 3

[node name="RocketMeshRight" type="MeshInstance" parent="Body"]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0.01, 0, 0 )
visible = false
portal_mode = 3
material_override = ExtResource( 13 )
mesh = ExtResource( 24 )
script = ExtResource( 34 )
required_setting = 3

[node name="DoorMesh" type="MeshInstance" parent="Body"]
transform = Transform( -4.3873e-08, 1.39595e-11, 1, 0.0860603, 0.99629, 3.76181e-09, -0.99629, 0.0860603, -4.37114e-08, -0.646664, 0.683186, -2.40856 )
portal_mode = 3
material_override = ExtResource( 25 )
mesh = ExtResource( 16 )
script = ExtResource( 34 )
required_setting = 3

[node name="ScoreLabel" type="Label3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
portal_mode = 3
pixel_size = 0.003
billboard = 1
double_sided = false
fixed_size = true
font = SubResource( 19 )
script = ExtResource( 37 )

[node name="ShotPositionShotgunUp" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 0.377985, 2.48896 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionShotgunDown" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 0.996195, -0.0871557, 0, 0.0871557, 0.996195, 0, 0.377985, 2.48896 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionShotgunLeft" type="RayCast" parent="Body"]
transform = Transform( 0.996195, 0, 0.0871557, 0, 1, 0, -0.0871557, 0, 0.996195, 0, 0.377985, 2.48896 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionShotgunMiddle" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.377985, 2.48896 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionShotgunRight" type="RayCast" parent="Body"]
transform = Transform( 0.996195, 0, -0.0871557, 0, 1, 0, 0.0871557, 0, 0.996195, 0, 0.377985, 2.48896 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionSniper" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.53185, 0.722803, 2.26538 )
enabled = true
cast_to = Vector3( 0, 0, 70 )
collision_mask = 3

[node name="ShotPositionMachineGun" type="RayCast" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.528901, 0.717882, 2.26525 )
enabled = true
cast_to = Vector3( 0, 0, 70 )

[node name="CartridgeExitSniper" type="Position3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.587826, 0.764665, 1.26292 )

[node name="CartridgeExitMachineGun" type="Position3D" parent="Body"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74227e-08, 0, -1, -0.589795, 0.750338, 1.3582 )

[node name="ShotgunFlash" type="Spatial" parent="Body"]

[node name="Particles" parent="Body/ShotgunFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0.378, 2.489 )

[node name="CPUParticles" parent="Body/ShotgunFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.378, 2.489 )

[node name="SniperFlash" type="Spatial" parent="Body"]

[node name="Particles" parent="Body/SniperFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0.531352, 0.722693, 2.26525 )

[node name="CPUParticles" parent="Body/SniperFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.531352, 0.722693, 2.26525 )

[node name="MachineGunFlash" type="Spatial" parent="Body"]

[node name="Particles" parent="Body/MachineGunFlash" instance=ExtResource( 9 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, -0.528901, 0.717882, 2.26525 )

[node name="CPUParticles" parent="Body/MachineGunFlash" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.528901, 0.717882, 2.26525 )

[node name="ExplosionParticles" parent="Body" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="ExplosionCPUParticles" parent="Body" instance=ExtResource( 39 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.76547, 0 )

[node name="DeathParticles" parent="Body" instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.711978, 1.47142 )

[node name="DeathCPUParticles" parent="Body" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.711978, 1.47142 )

[node name="DriftParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.102, -1.231 )

[node name="Right" parent="Body/DriftParticles" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.102, -1.231 )

[node name="DriftCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.886, 0.102, -1.231 )

[node name="Right" parent="Body/DriftCPUParticles" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886, 0.102, -1.231 )

[node name="NitroParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/NitroParticles" instance=ExtResource( 11 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.620491, 0.144646, -2.45047 )

[node name="Right" parent="Body/NitroParticles" instance=ExtResource( 11 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.62, 0.145, -2.45 )

[node name="NitroCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/NitroCPUParticles" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.62, 0.145, -2.45 )

[node name="Right" parent="Body/NitroCPUParticles" instance=ExtResource( 17 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.62, 0.145, -2.45 )

[node name="RocketParticles" type="Spatial" parent="Body"]

[node name="Particles" parent="Body/RocketParticles" instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.38419e-07, 0.638471, -2.53344 )

[node name="RocketCPUParticles" type="Spatial" parent="Body"]

[node name="CPUParticles" parent="Body/RocketCPUParticles" instance=ExtResource( 7 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.638581, -2.53307 )

[node name="ReverseRocketParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/ReverseRocketParticles" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 1.03779, 0.29327, -0.269664 )

[node name="Right" parent="Body/ReverseRocketParticles" instance=ExtResource( 4 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -1.038, 0.293, -0.27 )

[node name="ReverseRocketCPUParticles" type="Spatial" parent="Body"]

[node name="Left" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, 1.038, 0.293, -0.27 )

[node name="Right" parent="Body/ReverseRocketCPUParticles" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 1, -1.038, 0.293, -0.27 )

[node name="AcidParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.668589, 0 )

[node name="Particles" parent="Body/AcidParticles" instance=ExtResource( 35 )]

[node name="AcidCPUParticles" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.668589, 0 )

[node name="CPUParticles" parent="Body/AcidCPUParticles" instance=ExtResource( 38 )]

[node name="OpenAudio" type="AudioStreamPlayer3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.526351, -1.38123 )
stream = ExtResource( 33 )
bus = "Effects"

[node name="CloseAudio" type="AudioStreamPlayer3D" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.526351, -1.38123 )
stream = ExtResource( 32 )
bus = "Effects"

[node name="DeathAudio" type="AudioStreamPlayer3D" parent="Body"]
stream = ExtResource( 28 )
unit_size = 4.0
bus = "Effects"

[node name="LoopingAudio" type="Spatial" parent="Body"]

[node name="EngineAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.423825, 1.61274 )
stream = ExtResource( 30 )
unit_size = 0.1
autoplay = true
bus = "Effects"

[node name="DriftAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
stream = ExtResource( 29 )
unit_size = 0.4
autoplay = true
stream_paused = true
bus = "Effects"

[node name="NitroAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.138223, -2.53466 )
stream = ExtResource( 27 )
unit_size = 0.8
autoplay = true
stream_paused = true
bus = "Effects"

[node name="RocketAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.636645, -2.43567 )
stream = ExtResource( 26 )
unit_size = 0.7
autoplay = true
stream_paused = true
bus = "Effects"

[node name="ReverseRocketAudio" type="AudioStreamPlayer3D" parent="Body/LoopingAudio"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.292929, -0.268647 )
stream = ExtResource( 26 )
unit_size = 0.7
autoplay = true
stream_paused = true
bus = "Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
anims/RESET = SubResource( 7 )
anims/nitro_rocket = SubResource( 17 )
anims/rocket_nitro = SubResource( 18 )

[node name="RespawnTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="ShotgunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.8
one_shot = true

[node name="SniperTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 1.2
one_shot = true

[node name="MachineGunTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="StuckTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0

[connection signal="timeout" from="RespawnTimer" to="Body" method="_on_RespawnTimer_timeout"]
[connection signal="timeout" from="ShotgunTimer" to="Body" method="_on_ShotgunTimer_timeout"]
[connection signal="timeout" from="SniperTimer" to="Body" method="_on_SniperTimer_timeout"]
[connection signal="timeout" from="MachineGunTimer" to="Body" method="_on_MachineGunTimer_timeout"]
[connection signal="timeout" from="StuckTimer" to="Body" method="_on_StuckTimer_timeout"]
